--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ pillow==9.4.0
 faker==18.3.1
 django-widget-tweaks==1.4.12
 weasyprint==58.1
+django-lifecycle==1.0.0
+celery[redis]==5.2.7
+django-celery-results==2.5.0
