silk, debug toolbar, context_processors

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ django-celery-results==2.5.0
 django-extensions==3.2.1
 django-celery-beat==2.5.0
 django-rosetta==0.9.9
+django-silk==5.0.3
+django-debug-toolbar==4.0.0
