--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ ipdb==0.13.13
 flake8==6.0.0
 django-environ==0.10.0
 pillow==9.4.0
-faker==18.3.1
+faker==18.7.0
 django-widget-tweaks==1.4.12
 weasyprint==58.1
 django-lifecycle==1.0.0
@@ -14,3 +14,5 @@ django-celery-beat==2.5.0
 django-rosetta==0.9.9
 django-silk==5.0.3
 django-debug-toolbar==4.0.0
+pytest==7.3.1
+pytest-django==4.5.2
