--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,5 @@ django-filter==23.2
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 djangorestframework-simplejwt==5.2.2
+psycopg==3.1.9
+daphne==4.0.0
