--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: "3.1"
 services:
   backend:
     build: .
-    command: daphne -b 0.0.0.0 -p 8000 project.asgi:application
-#    command: tail -f > /dev/null
+#    command: daphne -b 0.0.0.0 -p 8000 project.asgi:application
+    command: tail -f > /dev/null
 #    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
     volumes:
       - .:/project
-#    ports:
-#      - 8000:8000
+    ports:
+      - 8000:8000
     expose:
       - 8000
     restart: always
@@ -49,18 +49,18 @@ services:
     depends_on:
       - redis
       - celery
-  nginx:
-    image: nginx:latest
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./logs/nginx/:/project/logs/nginx/
-      - ./static_files/:/project/static_files/
-      - ./media/:/project/media/
-    depends_on:
-      - backend
-    restart: always
+#  nginx:
+#    image: nginx:latest
+#    ports:
+#      - 80:80
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+#      - ./logs/nginx/:/project/logs/nginx/
+#      - ./static_files/:/project/static_files/
+#      - ./media/:/project/media/
+#    depends_on:
+#      - backend
+#    restart: always
 
 volumes:
   postgres_data:
